Fixed a bug for the background image not showing

--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body{
     font-family: Verdana, sans-serif;
-
 }
 
 .main{
-    background-image: url("/images/brown-smoke-background.jpg");
+    background-image: url("images/brown-smoke-background.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -20,10 +19,3 @@ img{
     margin-left: auto;
     margin-right: auto;
 }
-/*.banner{
-    display: block;
-    margin: auto;
-    padding: 0px;
-    max-height: 100%;
-    max-width: 100%;
-}*/
